--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,36 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Operative SDK"
+description: "Build AI-powered computer use into your product in minutes."
 ---
 
-## Setting up
+## What is the Operative SDK?
 
-Get your documentation site up and running in minutes.
+A small Python SDK that lets an LLM control a local browser to complete real-world tasks. One function, clear results, provider-agnostic.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+<Card title="Quickstart" icon="rocket" href="/quickstart" horizontal>
+  Get up and running in under 2 minutes.
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## Why teams use it
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+  <Card title="Simple API" icon="code" href="/sdk/python">
+    One async function: `opcua.run(task, model)`.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Provider choice" icon="shuffle" href="/sdk/python">
+    Switch between Claude, OpenAI, and BrowserUse.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Real results" icon="image" href="/sdk/results">
+    Get screenshots, summaries, and final messages.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  <Card title="Bring your backend" icon="server" href="/backend">
+    Use our lightweight proxy for keys and routing.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Show me the flow
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+1. Your app calls the SDK.
+2. The SDK opens a local browser and streams screenshots.
+3. The backend proxy coordinates steps with the model.
+4. You get a `ComputerResult` with what happened.
