--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,61 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Install, run a task, and see results."
 ---
 
-## Get started in three steps
+## 1) Install the SDK
 
-Get your documentation site running locally and make your first customization.
+Use `uv` (recommended):
 
-### Step 1: Set up your local environment
+```bash
+uv add cua-sdk
+```
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+If you want the example backend too, clone this repo and run the backend as below.
 
-### Step 2: Deploy your changes
+## 2) Run your first task
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+```python
+import asyncio
+import opcua
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+async def main():
+    result = await opcua.run(
+        "Open google.com and search for Operative SDK",
+        "claude",
+        cua_api_key="YOUR_KEY",
+    )
+    print(result.success, result.summary)
 
-### Step 3: Go live
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+asyncio.run(main())
+```
 
-## Next steps
+- **model**: `"claude" | "openai" | "browseruse"`
+- Optional: `starting_url="https://example.com"`
 
-Now that you have your docs running, explore these key features:
+## 3) Start the backend (optional but recommended)
 
-<CardGroup cols={2}>
+The backend proxies model calls and enforces per-key quotas.
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+```bash
+cd CUA-backend
+uv sync && uv run python main.py
+```
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+Set `ANTHROPIC_API_KEY` or `OPENAI_API_KEY` in your environment.
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
+## What you get back
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
+`ComputerResult` includes:
 
-</CardGroup>
+```python
+result.success        # bool
+result.summary        # str
+result.screenshots    # List[str] (base64 PNGs)
+result.final_message  # str
+result.error          # Optional[str]
+```
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>Screenshots are base64 PNGs. Store them or stream them to your UI.</Tip>
